# xpemlflow1807

./: .gitignore  README.md  app.py  pacotes  pyproject.toml  requirements.txt  rest.http  test_api.py
.github/workflows/: ci.yml
